# litedocs

./: .gitignore  Cargo.toml  README.md  errors.yaml  setup-local-dev.sh
app/: Cargo.toml  Dioxus.toml
app/assets/: tailwind.css
app/assets/styling/: main.css
app/src/: main.rs  util.rs
app/src/components/: editor.rs  library.rs  mod.rs  statusbar.rs  topbar.rs
app/src/internal/files/: mod.rs
app/src/views/: home.rs  mod.rs
document/: Cargo.toml
document/src/: lib.rs
document/src/internal/: mod.rs  naming.rs
document/src/internal/storage/: mod.rs
document/src/pkg/: mod.rs  storage.rs
document/src/pkg/storage/: mod.rs
server/: Cargo.toml
server/migrations/: 0001_init.sql
server/src/: conf.rs  main.rs  prelude.rs  state.rs
server/src/cmd/: mod.rs  serve.rs
server/src/internal/: db.rs  types.rs  webauthn.rs
server/src/pkg/server/: router.rs
server/src/pkg/server/handlers/: mod.rs  probes.rs  webauthn.rs
website/: Cargo.toml
website/src/: main.rs
